--- a/subprojects/docs/src/samples/idea/build.gradle
+++ b/subprojects/docs/src/samples/idea/build.gradle
@@ -3,34 +3,42 @@ apply plugin: 'idea'
 // END SNIPPET use-plugin
 // START SNIPPET module-before-configured
 // START SNIPPET module-when-configured
-ideaModule {
+idea {
+    module {
 // END SNIPPET module-when-configured
-    beforeConfigured { module ->
-        module.dependencies.clear()
-    }
+        iml {
+            beforeMerged { module ->
+                module.dependencies.clear()
+            }
 // END SNIPPET module-before-configured
 // START SNIPPET module-when-configured
-    whenConfigured { module ->
-        module.dependencies*.exported = true
-    }
+            whenMerged { module ->
+                module.dependencies*.exported = true
+            }
+        }
 // START SNIPPET module-before-configured
+    }
 }
 // END SNIPPET module-before-configured
 // END SNIPPET module-when-configured
 
 // START SNIPPET project-before-configured
 // START SNIPPET project-with-xml
-ideaProject {
+idea {
+    project {
 // END SNIPPET project-with-xml
-    beforeConfigured { project ->
-        project.modulePaths.clear()
-    }
+        ipr {
+            beforeMerged { project ->
+                project.modulePaths.clear()
+            }
 // END SNIPPET project-before-configured
 // START SNIPPET project-with-xml
-    withXml { provider ->
-        provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
-    }
+            withXml { provider ->
+                provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
+            }
+        }
 // START SNIPPET project-before-configured
+    }
 }
 // END SNIPPET project-before-configured
 // END SNIPPET project-with-xml
