--- a/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
+++ b/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
@@ -7,8 +7,10 @@ allprojects {
 subprojects {
     apply plugin: 'java'
 
-    ideaModule {
-        downloadJavadoc = true
+    idea {
+        module {
+            downloadJavadoc = true
+        }
     }
 
     repositories {
