--- a/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/overwritesExistingDependencies/build.gradle
+++ b/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/overwritesExistingDependencies/build.gradle
@@ -10,6 +10,6 @@ dependencies {
     runtime 'junit:junit:4.7@jar'
 }
 
-ideaModule {
-    variables['CUSTOM_DIR'] = new File(gradle.gradleUserHomeDir, 'custom')
+idea {
+    pathVariables CUSTOM_DIR: new File(gradle.gradleUserHomeDir, 'custom')
 }
