--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -25,13 +25,17 @@ task startScripts << {
     StartScriptsGenerator.generate(jar.archiveName, startScriptsDir, 'gradle')
 }
 
-ideaModule {
-    scopes.RUNTIME.plus << rootProject.configurations.runtime
-    scopes.RUNTIME.plus << rootProject.configurations.plugins
-    scopes.RUNTIME.plus << rootProject.configurations.coreImpl
+idea {
+    module {
+        scopes.RUNTIME.plus << rootProject.configurations.runtime
+        scopes.RUNTIME.plus << rootProject.configurations.plugins
+        scopes.RUNTIME.plus << rootProject.configurations.coreImpl
+    }
 }
-eclipseClasspath {
-    plusConfigurations << rootProject.configurations.runtime
-    plusConfigurations << rootProject.configurations.plugins
-    plusConfigurations << rootProject.configurations.coreImpl
+eclipse {
+    classpath {
+        plusConfigurations << rootProject.configurations.runtime
+        plusConfigurations << rootProject.configurations.plugins
+        plusConfigurations << rootProject.configurations.coreImpl
+    }
 }
