--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -48,8 +48,8 @@ artifacts {
 uploadArchives {
     configuration = configurations.publishRuntime
     dependsOn generatePom
+    uploadDescriptor = true
 /*
-    uploadDescriptor = false
     doFirst {
         org.apache.ivy.util.url.CredentialsStore.INSTANCE.addCredentials('Artifactory Realm', 'repo.gradle.org', artifactoryUserName, artifactoryUserPassword)
         repositories.add(new org.apache.ivy.plugins.resolver.URLResolver()) {
