--- a/init.gradle
+++ b/init.gradle
@@ -3,7 +3,7 @@ gradle.projectsLoaded {
     rootProject.allprojects {
         buildscript {
             repositories {
-                mavenRepo(urls: 'http://localhost:8081/artifactory/libs-snapshot').setChecksums('sha1')
+                mavenRepo(urls: 'http://repo.jfrog.org/artifactory/libs-snapshots').setChecksums('sha1')
             }
             dependencies {
                 classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.0.x-SNAPSHOT')
