--- a/subprojects/docs/src/samples/eclipse/build.gradle
+++ b/subprojects/docs/src/samples/eclipse/build.gradle
@@ -4,47 +4,31 @@ apply plugin: 'eclipse'
 // END SNIPPET use-plugin
 // START SNIPPET module-before-configured
 // START SNIPPET module-when-configured
-eclipse {
-    classpath {
+eclipse.classpath {
 // END SNIPPET module-when-configured
-        file {
-            beforeMerged { classpath ->
-                classpath.entries.removeAll { entry -> entry.kind == 'lib' || entry.kind == 'var' }
-            }
+    file {
+        beforeMerged { classpath ->
+            classpath.entries.removeAll { entry -> entry.kind == 'lib' || entry.kind == 'var' }
+        }
 // END SNIPPET module-before-configured
 // START SNIPPET module-when-configured
-            whenMerged { classpath ->
-                classpath.entries.findAll { entry -> entry.kind == 'lib' }*.exported = false
-            }
+        whenMerged { classpath ->
+            classpath.entries.findAll { entry -> entry.kind == 'lib' }*.exported = false
         }
-// START SNIPPET module-before-configured
     }
+// START SNIPPET module-before-configured
 }
 // END SNIPPET module-before-configured
 // END SNIPPET module-when-configured
 
 // START SNIPPET project-before-configured
-eclipse {
-    project {
-        file {
-            beforeMerged { project ->
-                project.natures.clear()
-            }
-        }
-    }
+eclipse.project.file.beforeMerged { project ->
+    project.natures.clear()
 }
 // END SNIPPET project-before-configured
 
 // START SNIPPET wtp-with-xml
-eclipse {
-    wtp {
-        facet {
-            file {
-                withXml { provider ->
-                    provider.asNode().fixed.find { it.@facet == 'jst.java' }.@facet = 'jst2.java'
-                }
-            }
-        }
-    }
+eclipse.wtp.facet.file.withXml { provider ->
+    provider.asNode().fixed.find { it.@facet == 'jst.java' }.@facet = 'jst2.java'
 }
 // END SNIPPET wtp-with-xml
