--- a/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
+++ b/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
@@ -28,5 +28,5 @@ subprojects {
 cleanIdea.doLast {
     assert !file("${project.name}.iml").isFile()
     assert !file("${project.name}.ipr").isFile()
-    assert !file("${project.name}.iws").isFile()
+    assert file("${project.name}.iws").isFile() //we don't rid the iws file
 }
