Fixed some more deprecation warnings related to idea changes, bumped wrapper version, removed the deprecation where it shouldn't be in the first place.

--- a/build.gradle
+++ b/build.gradle
@@ -291,11 +291,8 @@ idea {
             }
         }
     }
-}
 
-//TODO SF apparently workspace needs explicit model as well :)
-ideaWorkspace {
-    withXml { provider ->
+    workspace.iws.withXml { provider ->
         Node node = provider.asNode()
 
         Node runManagerConfig = node.component.find { it.'@name' == 'RunManager' }
