--- a/subprojects/docs/src/samples/ear/earCustomized/ear/build.gradle
+++ b/subprojects/docs/src/samples/ear/earCustomized/ear/build.gradle
@@ -6,12 +6,11 @@ repositories { mavenCentral() }
 dependencies {
     //following dependencies will become the ear modules and placed in the ear root
     deploy project(':war')
-
-    //following dependencies will become ear libs and placed in a dir configured via libDirName property
-    earlib group: 'log4j', name: 'log4j', version: '1.2.15', ext: 'jar'
 }
 
 ear {
+    skinnyDeploy true  // our war is "skinny": it doesn't package its own dependencies;
+                         // put dependencies from deployed modules into the ear's lib dir
     appDirName 'src/main/app'  // use application metadata found in this folder
     libDirName 'APP-INF/lib'  // put dependency libraries into APP-INF/lib inside the generated EAR;
                                 // also modify the generated deployment descriptor accordingly
