--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,7 @@ uploadPublished {
 							def signedPomArtifact = sign(deployment.pomArtifact).singleArtifact
 							// Have to alter the “type” of the artifact to match what is published
 							// See http://issues.gradle.org/browse/GRADLE-1589
-							signedPomArtifact.type = "pom." + signing.type.fileExtension
+							signedPomArtifact.type = "pom." + signing.type.extension
 							deployment.addArtifact(signedPomArtifact)
 						}
 					}
