Made “check” run integration tests in addition to unit tests.

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -69,6 +69,9 @@ task integTest(type: Test) {
     }
 }
 
+
+tasks.findByName("check")?.dependsOn(integTest)
+
 class IntegTestPlugin implements Plugin<Project> {
     public void apply(Project project) {
         project.convention.plugins.integTest = new IntegTestConvention(project)
