--- a/subprojects/integ-test/integ-test.gradle
+++ b/subprojects/integ-test/integ-test.gradle
@@ -31,6 +31,7 @@ integTestTasks.all {
 
         if (isDevBuild()) {
             exclude 'org/gradle/integtests/DistributionIntegrationTest.*'
+            exclude 'org/gradle/**/ToolingApiCompatibilitySuite.*'
         }
     }
 }
