--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile 'com.google.collections:google-collections:1.0@jar'
+    compile 'commons-lang:commons-lang:2.6@jar'
     groovy localGroovy()
     testCompile 'junit:junit:4.8.2@jar'
     testCompile 'org.spockframework:spock-core:0.5-groovy-1.7@jar', 'cglib:cglib-nodep:2.2', 'org.objenesis:objenesis:1.2'
