Updated the docs accordingly to the new behavior of 'eclipse' and 'eclipseWtp' plugins. Updated the samples as well. Removed unnecessary TODO and added a sanity test.

--- a/subprojects/docs/src/samples/eclipse/build.gradle
+++ b/subprojects/docs/src/samples/eclipse/build.gradle
@@ -26,6 +26,8 @@ eclipse.project.file.beforeMerged { project ->
 // END SNIPPET project-before-merged
 
 // START SNIPPET wtp-with-xml
+apply plugin: 'eclipseWtp'
+
 eclipse.wtp.facet.file.withXml { provider ->
     provider.asNode().fixed.find { it.@facet == 'jst.java' }.@facet = 'jst2.java'
 }
