Reworked the way the signature artifacts are structured so that they are fully lazy with respect to the source artifact that the signature is being produced for.
For example, previously if an archive task's classifier was changed after it was indicated that it needed to be signed then the signature's classifier would not match.

--- a/subprojects/docs/src/samples/mavenSigning/build.gradle
+++ b/subprojects/docs/src/samples/mavenSigning/build.gradle
@@ -24,10 +24,10 @@ uploadPublished {
             repository(url: uri("${buildDir}/repo"))
             
             beforeDeployment { MavenDeployment deployment ->
-                def signedPomArtifact = sign(deployment.pomArtifact).singleArtifact
+                def signedPomArtifact = sign(deployment.pomArtifact).singleSignature
                 // Have to alter the “type” of the artifact to match what is published
                 // See http://issues.gradle.org/browse/GRADLE-1589
-                signedPomArtifact.type = "pom." + signing.type.extension
+                signedPomArtifact.type = "pom." + signing.signatureType.extension
                 deployment.addArtifact(signedPomArtifact)
             }
         }
