Changed the intTestImage task to not require building the documentation, which means that integration tests in subprojects can now be run without having to build the docs.

--- a/build.gradle
+++ b/build.gradle
@@ -488,8 +488,8 @@ artifacts {
 }
 
 task intTestImage(type: Sync) {
-    dependsOn allZip.taskDependencies
-    with allDistImage
+    dependsOn "launcher:startScripts"
+    with binDistImage
     integTestGradleHome = file("$buildDir/integ test")
     into integTestGradleHome
     doLast { task ->
