Reinstate action to make the binaries executable when assembling the integration test distribution.
I removed this without realising it was needed.

--- a/build.gradle
+++ b/build.gradle
@@ -491,6 +491,9 @@ task intTestImage(type: Sync) {
     with binDistImage
     integTestGradleHome = file("$buildDir/integ test")
     into integTestGradleHome
+    doLast { task ->
+        ant.chmod(dir: "$integTestGradleHome/bin", perm: "ugo+rx", includes: "**/*")
+    }
 }
 
 def isDevBuild() {
