Added signPom(MavenDeployment) method as a shortcut for singing the POM for a deployment.

--- a/subprojects/docs/src/samples/mavenSigning/build.gradle
+++ b/subprojects/docs/src/samples/mavenSigning/build.gradle
@@ -22,14 +22,7 @@ uploadPublished {
     repositories {
         mavenDeployer {
             repository(url: uri("${buildDir}/repo"))
-            
-            beforeDeployment { MavenDeployment deployment ->
-                def signedPomArtifact = sign(deployment.pomArtifact).singleSignature
-                // Have to alter the “type” of the artifact to match what is published
-                // See http://issues.gradle.org/browse/GRADLE-1589
-                signedPomArtifact.type = "pom." + signing.signatureType.extension
-                deployment.addArtifact(signedPomArtifact)
-            }
+            beforeDeployment { MavenDeployment deployment -> signPom(deployment) }
         }
     }
 }
