--- a/subprojects/docs/src/samples/java/multiproject/build.gradle
+++ b/subprojects/docs/src/samples/java/multiproject/build.gradle
@@ -1,7 +1,7 @@
 // START SNIPPET configuration-injection
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'eclipseWtp'
+    apply plugin: 'eclipse-wtp'
 
     repositories {
        mavenCentral()
