Next steps in building compatibility suite for the tooling api. Now we have coverage both ways, eg. new tooling api, old gradle and vice versa. Many things may still be improved as we evolve this suite with new versions. Excluded the compatibility suites from the dev build

--- a/subprojects/integ-test/integ-test.gradle
+++ b/subprojects/integ-test/integ-test.gradle
@@ -31,7 +31,7 @@ integTestTasks.all {
 
         if (isDevBuild()) {
             exclude 'org/gradle/integtests/DistributionIntegrationTest.*'
-            exclude 'org/gradle/**/ToolingApiCompatibilitySuite.*'
+            exclude 'org/gradle/integtests/tooling/**/Suite.*'
         }
     }
 }
