Beginning of c++ support.
Very sketchy so far. Simply compiles a hello world app with g++.

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'docs'
 include 'integTest'
 include 'sonar'
 include 'signing'
+include 'cpp'
 
 rootProject.name = 'gradle'
 rootProject.children.each {project ->
