Added a task that can be used as a final release step. Useful in case the complete release procedure fails at some point and it is necessary to continue releasing step by step.

--- a/build.gradle
+++ b/build.gradle
@@ -613,6 +613,10 @@ task release {
     }
 }
 
+task incrementNextVersion << {
+    releases.incrementNextVersion()
+}
+
 task uploadAll {
     description = 'Uploads binaries, sources and documentation. Does not upload the website! Useful when release procedure breaks at upload and only upload tasks should executed again'
     dependsOn uploadArchives, uploadDists, ':docs:uploadDocs'
