Changed the module of the run config that is generated as a part of 'gradle idea'. This run config can be used to debug gradle builds from IDEA. Module change was necessary because some hacks were removed from launcher idea/eclipse configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -316,7 +316,7 @@ idea {
       <option name="ENABLE_SWING_INSPECTOR" value="false" />
       <option name="ENV_VARIABLES" />
       <option name="PASS_PARENT_ENVS" value="true" />
-      <module name="launcher" />
+      <module name="integTest" />
       <envs />
       <RunnerSettings RunnerId="Debug">
         <option name="DEBUG_PORT" value="63810" />
