More fixes around the capability of running/debugging any Gradle build from the IDE. After I removed the classpath-configuring hacks from launcher.gradle there couple of things I needed to do to keep existing functionality working. Needed to add explicit compile dependency from integTests->launcher project

--- a/build.gradle
+++ b/build.gradle
@@ -307,7 +307,7 @@ idea {
         def appConfig = new XmlParser().parseText('''
     <configuration default="false" name="Gradle" type="Application" factoryName="Application">
       <extension name="coverage" enabled="false" merge="false" />
-      <option name="MAIN_CLASS_NAME" value="org.gradle.launcher.Main" />
+      <option name="MAIN_CLASS_NAME" value="org.gradle.debug.GradleRunConfiguration" />
       <option name="VM_PARAMETERS" value="" />
       <option name="PROGRAM_PARAMETERS" value="" />
       <option name="WORKING_DIRECTORY" value="file://$PROJECT_DIR$" />
