--- a/subprojects/integ-test/integ-test.gradle
+++ b/subprojects/integ-test/integ-test.gradle
@@ -10,6 +10,7 @@ dependencies {
     integTestCompile project(path: ':core', configuration: 'integTestFixturesRuntime')
 
     integTestCompile project(':toolingApi')
+    integTestCompile project(':launcher')
     integTestCompile libraries.ant
     integTestCompile libraries.xmlunit
 
