Fixed the script so that it is possible to run website tests against snapshot versions. This is yet another step towards automated deployment of snapshots/docs/test website.

--- a/website/build.gradle
+++ b/website/build.gradle
@@ -13,11 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 import groovy.text.SimpleTemplateEngine
 import groovy.text.Template
 import groovy.text.TemplateEngine
 import java.util.regex.Matcher
-import com.sun.org.apache.xerces.internal.parsers.XMLParser
 
 // we only need a test source set
 apply plugin: 'groovy'
@@ -27,7 +27,8 @@ apply plugin: 'eclipse'
 apply from: '../gradle/codeQuality.gradle'
 apply from: '../gradle/ssh.gradle'
 
-remoteLocations = new RemoteLocations()
+VersionInfo versionInfo = new VersionInfo()
+RemoteLocations remoteLocations = new RemoteLocations(versionInfo: versionInfo)
 
 repositories {
     mavenCentral()
@@ -70,9 +71,9 @@ releases = []
 task configureReleases << {
     def releaseXml = new XmlParser().parse(new File(generatedDocs, "releases.xml"))
     def current = releaseXml.current[0]
-    releases << new CurrentRelease(version: current.'@version')
+    releases << new CurrentRelease(version: current.'@version', versionInfo: versionInfo)
     releaseXml.release.each {
-        releases << new Release(version: it.'@version')
+        releases << new Release(version: it.'@version', versionInfo: versionInfo)
     }
 }
 
@@ -131,7 +132,7 @@ assemble.dependsOn html
 task releaseVersion
 gradle.taskGraph.whenReady { graph ->
     if (graph.hasTask(releaseVersion)) {
-        remoteLocations.release = true
+        versionInfo.release = true
     }
 }
 
@@ -254,6 +255,7 @@ class PhpIncludes {
 class Release {
     def String title
     def String version
+    def VersionInfo versionInfo
 
     def BigDecimal getMajorVersion() {
         Matcher matcher = version =~ /(\d+\.\d+).*/
@@ -286,7 +288,8 @@ class Release {
 
     def String getDistributionBase() {
         if (majorVersion >= 0.9 && !version.startsWith('0.9-rc')) {
-            return "http://repo.gradle.org/gradle/distributions/"
+            String artifactoryFolder = versionInfo.release? 'distributions' : 'distributions-snapshots'
+            return "http://repo.gradle.org/gradle/$artifactoryFolder/"
         } else {
             return "http://dist.codehaus.org/gradle/"
         }
@@ -343,11 +346,15 @@ class CurrentRelease extends Release {
     }
 }
 
-class RemoteLocations {
+class VersionInfo {
     boolean release
+}
+
+class RemoteLocations {
+    VersionInfo versionInfo
 
     String getWebsiteUrl() {
-        return release ? 'http://www.gradle.org/' : 'http://www.gradle.org/latest/'
+        return versionInfo.release ? 'http://www.gradle.org/' : 'http://www.gradle.org/latest/'
     }
 
     String getWebRootDir() {
@@ -355,6 +362,6 @@ class RemoteLocations {
     }
 
     String getScpDir() {
-        return release ? webRootDir : "$webRootDir/latest"
+        return versionInfo.release ? webRootDir : "$webRootDir/latest"
     }
 }
