Added a way to disable integTests globally. Just pass -PskipIntegTests when running gradle. There are quite a few use cases for it. The current one is fast & easy to maintain CI job that uploads snapshot/docs/website.

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -37,6 +37,11 @@ integTestTasks = tasks.withType(Test).matching { it.name.toLowerCase().endsWith(
 rootProject.integTests << integTestTasks
 
 integTestTasks.all {
+    if (project.hasProperty('skipIntegTests')) {
+        logger.quiet("Marking test task as disabled: $it")
+        it.enabled = false
+    }
+
     dependsOn ':intTestImage', project(":docs").samples
     testClassesDir = sourceSets.integTest.output.classesDir
     classpath = sourceSets.integTest.runtimeClasspath
