--- a/subprojects/docs/src/samples/application/build.gradle
+++ b/subprojects/docs/src/samples/application/build.gradle
@@ -9,6 +9,21 @@ version = '1.0.2'
 mainClassName = "org.gradle.sample.Main"
 // END SNIPPET mainClassName-conf
 
+// START SNIPPET distribution-spec
+task createDocs {
+    def docs = file("$buildDir/docs")
+    outputs.dir docs
+    doLast {
+        docs.mkdirs()
+        new File(docs, "readme.txt").write("Read me!")
+    }
+}
+
+applicationDistribution.from(createDocs.outputs.files) {
+    into "docs"
+}
+// END SNIPPET distribution-spec
+
 repositories {
     mavenCentral()
 }
