Adding new “ear” submodule to split the ear classes out from the “plugins” monolith.

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,7 @@ include 'integTest'
 include 'sonar'
 include 'signing'
 include 'cpp'
+include 'ear'
 
 rootProject.name = 'gradle'
 rootProject.children.each {project ->
