--- a/subprojects/ide/ide.gradle
+++ b/subprojects/ide/ide.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile project(':scala')
     compile project(':core')
     compile project(':plugins')
+    compile project(':ear')
     compile project(':toolingApi')
     compile libraries.commons_io
     compile libraries.slf4j_api, libraries.jaxen
